@@ -2,13 +2,13 @@
 Hash: SHA256
 
 DIST libhid-0.2.16.tar.gz 435245 SHA256 f6809ab3b9c907cbb05ceba9ee6ca23a705f85fd71588518e14b3a7d9f2550e5 SHA512 3c9348f9d63e0e1577e983c65ff8e6acbaee0d5f43ecb29b7004654a7e9d14a94176aa029f259e0b8576fc30e8a9af6d1df34912dd582bfadc2b29f9b87eb52b WHIRLPOOL 76edaf3a22f015d16fe2583102c9ee9a839ff17b8172309d3595f3054a22e3f8b119b3560a621490fac7a47966f2519b9b31824e91958012f767387adaa8871c
-EBUILD libhid-0.2.16-r3.ebuild 1784 SHA256 890c066fd980407bf6892d08e4031cd074ccd5c31ca7d1c95f6ea603321e5d3f SHA512 13596cbfd609ab611c60818be6db64a8806f0f9d47f76c963c34f0c256261013e0e80f9b81462222d92d7d379dcb8ae296da55840a008331bf20c1ba7a45f9b4 WHIRLPOOL 3eb46eeeb27e142eaef3b485f32faf3b4a3b869d340c8c6f6115cb10dae2e86f49769366f1f63a0e778598796c023bfc77093855870b500aa58d8e51466d845b
-MISC ChangeLog 1401 SHA256 6da21b2524af7cf12a41cd01fd970fe2470b2df924bb655b00811661f41fb2c1 SHA512 f708e928890d02a1d33a5fd8da323791fd55dd1f1ad007741d28a7b7f6540948d6944b7a461599f610dcacd29afa1ed943d7c1f5aedb121bd9d10bd0173674b4 WHIRLPOOL 02f6abf33e215f6c40f97ebf4050bf200f4de75118f500d5cee6c1441209068ee96b4eaa75ab2c31e1622aa91c3cab45c86a62926d8e5997acd31493f806c9eb
+EBUILD libhid-0.2.16-r3.ebuild 1853 SHA256 dada30213cc5eb356dec530341461f710689d2e9cc92286d89f4db1be23bf3b4 SHA512 caad1e8bd1999a74e6596e763575f676cb208b704fb8940f0f3936cdba69e50ed5f7b5abc2e473505dd51d0d754638c359c9767c7ae11332ba838f2021d9e281 WHIRLPOOL f2650365fa8bca19896a8f16134c2bfc7163a3f46f2063f68555028af4785b319c904c41966b1e8f08a54fbc5cef994a8dff1902249bec521a94540144b04d77
+MISC ChangeLog 1525 SHA256 9cac510964d18fb4eddfa15effbc60ac60c01c604c3b4d2026184f7babf2b873 SHA512 cb2ba0edf2efa60da4ed545ef5c1770800c7331d1c45f86cff65c1369325daf1b1f4fd35e03db426d5f902956c80e58c68297432e63cb63e56578f8846e41502 WHIRLPOOL f43b88516e43111dfa778e58ba80fd47a2b105b0b0de0ee3fd4834c9cd89facc815487ba6571e6b465acae20bcb28d251c011add6df89905c2137c6f84574315
 MISC metadata.xml 540 SHA256 10328cefda78e580a89e52cfcc424a62ee91b430c782d0bd6409644674714b97 SHA512 55bfb95a071db6597a759017a238315f4b25820267d6a1803889e848d7fb69dec3469b032bef6ff316e37e14598fdbad9e6070080f9a9281e720a6864f36fcac WHIRLPOOL 2f80a720b33ed3e3b2e9dfd35ae80fe3a557ecdd6c275175cacb2b834e4204b1434b9a47158e49c9ff8278795bb712f810de710a104a332814c53904b50607a8
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2
 
-iEYEAREIAAYFAlEOVPUACgkQCaWpQKGI+9RkHACfU6QK9OSbeiY3/zOGHdfPCVFD
-Kg0AnR+rBMYNxxVHO0Rye9Dc7pPjrouI
-=K83z
+iEYEAREIAAYFAlPrJj4ACgkQVWmRsqeSphN80wCeKrspPNdGW6UYK9+DnaoC9EkP
+sfgAn0CY0MRe0ahl7362ZJrhB5q8Cs9M
+=qScr
 -----END PGP SIGNATURE-----
