@@ -1,6 +1,6 @@
-# Copyright 1999-2012 Gentoo Foundation
+# Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libhid/libhid-0.2.16-r3.ebuild,v 1.4 2012/12/17 20:56:20 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libhid/libhid-0.2.16-r3.ebuild,v 1.5 2014/08/13 08:47:57 jer Exp $
 
 EAPI="2"
 
@@ -31,6 +31,8 @@ src_prepare() {
 	export OS_LDFLAGS="${LDFLAGS}"
 	# Bug #260884
 	sed -i -e 's/-Werror//' m4/md_conf_compiler.m4 || die
+	# bug #519768
+	sed -i -e '/MD_CONF_DEBUGGING/d' configure.ac || die
 	eautoconf
 }
 
