@@ -10,4 +10,4 @@ RDEPEND=virtual/libusb:0 python? ( =dev-lang/python-2* )
 SLOT=0
 SRC_URI=http://beta.magicaltux.net/libhid-0.2.16.tar.gz
 _eclasses_=autotools	ebea507d219855923e3438c953cf4ab8	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	multiprocessing	d7f2985a2c76c365ee20269db5261414	python	be9965681d83c3980660a2660ac95e95	toolchain-funcs	0f1760274637a138b99bb649202ea402
-_md5_=b2551d98038ad07043d25984c18bde66
+_md5_=cb3b59e462614173d7a3d4d694a53960
