@@ -50,15 +50,15 @@ EBUILD nvidia-drivers-331.89.ebuild 12980 SHA256 766f2469ab306c55554877e0e7b0f22
 EBUILD nvidia-drivers-334.21-r3.ebuild 13265 SHA256 fc05447975d06771e47ffa420daedea99c365c733f0f313ff0274d64d791dab1 SHA512 c0642c508616edd7e1a742f3a3ea20bc3f185e92c9e7a6b0a50ed179eb75cf07d5f1869098af9ad5822691f30ab91866f70e96dd01061ad10229f2c3d83b1987 WHIRLPOOL 3b64e50e871ad31e830b64b8248741e61d906bb31758fd76b63c5aaff1a098ef6938b372c9937305784ce03f2b731adf6117f48f409dd80320f661f299d38d2a
 EBUILD nvidia-drivers-337.25.ebuild 13268 SHA256 c3ebd456f9ad1ed91c699e1628b6c8cd85468099771afaca3957f512c8a9e2a4 SHA512 fdd60e6ccee344037ca31cf5ce952f4382ca70ad78288076af03799bfb3e070693dfb58f60e1e3918341909638312b2465dff4b6fb83d60cf9d7d075474a82ad WHIRLPOOL 2c3ec9ddafb5e3bedaee1d0448ba9843ddcd2488c5ef5c9d02deef673a50ab1668efe8f6ffbf6997051e2efc26928c76c84de49cc2399566b0725b582185c270
 EBUILD nvidia-drivers-340.24.ebuild 13268 SHA256 50b2a114deca587e61745b287b6dd12a9d881e95e7e37662ffe4ba7d8a3a022f SHA512 f3554133e5e27e664926546b62f649300bc9ef9a92fb4036b24b100355249ea965465f54275824a6f0bb0599ceb01d9d8c4c762154d1a572fef4757704fcf6c7 WHIRLPOOL cc1509bebd413dc1ad093db141c026bf00666d465b0a62e6e40e13d2d7937314b68f8afcf54ef8c6917bec26dac20a24592e642c6e3252dce614d5fa99e3ac66
-EBUILD nvidia-drivers-343.13.ebuild 13264 SHA256 fb56802b21169eb92d4f45b744cd607646ca66db483bd168948b575c0199ab0f SHA512 0fe813fbec52375120faa53f47c21543a16eec604c7ca1022be1b055f5a7dc0d5d2f7b360757be7ac02ecf57b3e8be56b88dc957557a73ab28bdd4ea7bf55b10 WHIRLPOOL c72e8ef2055b424fbe987084e64c3deeecf24a1063d504657ddcefa1aaa2180ec1979659e3a00a9c15814a64492dc964f05fef5b0a544b0a58e7d77af8c8c98e
+EBUILD nvidia-drivers-343.13-r1.ebuild 13455 SHA256 57967c90cebcd645d974c6574b850d5b4f707ddef5b28916855def8286793c96 SHA512 537ff9111e90b1284dadd5a5cec22d60a2beadbca20a5f332fa397dbc9411215ad2d936a1ac2c13e27bb7c16923e09c0267fa199350977685ce0d883b2eeef40 WHIRLPOOL 7ba269a20ec52ec35056f00cfd90ec4f98893ec93f06e9b2aa05f2e9d648065f33126dc633dc71beab8706bbd9e5dc07819edbc9462bd9fbc3bae5a724448175
 EBUILD nvidia-drivers-96.43.23.ebuild 14900 SHA256 5c91c2cfe129887c8f7c6b810da0a19b95c732fd9bc0bfe983e8217b10c02e73 SHA512 6eb6d56c35dcbc009a1d59e28cc2a43b83f713ba6090efe60878c4ed76d316f51fab5a97893691b28908c3eb9618d53c2805e3d22538277825e9d9e13ac8ecbd WHIRLPOOL c3dc75f852b23b967490032280110c39e96b6141ef051b82003201ce99f7475ebccdeb109cdc318d39b504d8708bbbad73fe458be4a808398ffabafbdfd02a69
-MISC ChangeLog 10693 SHA256 73a583e9b483d63ad40f53a5941346c29b396d0b734a857bdb10ee36fb0887dd SHA512 5182e129e69642abea7aff38b219a33eba26ce1332a4064943deedfcf87a228d6420459780c015f971115a62fdaa3d502126d99d82429762f7065deeb42b1fd7 WHIRLPOOL 37535765d226a5f55b78a21f2324b5b3f628c863eac977484c09dc01bb6f7af8d9e5eda707d46a4e5873b63c7a56b785a6f21035a0ac1aa3873786974f1172e1
+MISC ChangeLog 10885 SHA256 e9a7f6aa9977ecfd31cc5072f5ba26a155cc20a0095380cb690f60b0bbbf26b0 SHA512 1eedbaa4ffc8ee0230b4db1aef6a2688cf3e13437d88b7de776f277f2de784ba8ff0b3cd4ea3ba9cc36e2a0b73525c468f781681ab1926efddbd3595787cd2d3 WHIRLPOOL 6c4ee31e85e1c3a691b713c09247865e5f8f65c9529ea6f3e044f456cb721c648a06e186e74181e49356915103da7452889833c51d83a39ce9c005ef5e479d9d
 MISC ChangeLog-2013 103100 SHA256 e8474a573b3e0082e71ed55094cb9298a631b76f415210e573b6db8b9a9fe6ce SHA512 706f2be5243cfe7ea2a850f8d3555d7d83d06c1341b8a8deb3ec9776970ed78fbcb2e99612dbb8205e4f553fcc564c187309d1b9013aecddbdc0cb9dc29cdb00 WHIRLPOOL ca71c3c53156cd722c6cdc2117358cdbb6cba8209bda6b3cbc59e4e84fbd9c4e278f108c06e80057a5af1a40993f24eb9cba542dd5e9518506f9ae6766fa56ba
 MISC metadata.xml 591 SHA256 1b2f8667e5aae901fd45390fe287245faf07dfaed57f7243037c290c01db3e4a SHA512 8a4d1e029a0c7633244a1853fc26b2ea31608aa13f947bb453d99bfe8e0937d46e8abe4c0704382a992a486d92f66bfd5cce7406a0f129ac97ef1fc0b602e5df WHIRLPOOL 3061925c0c8172c1bab032bc79d664668921682e5bac4b926b17ee5d15357a6eec959c7f8618a97fe3e181ab1229baf500400aa4ba3480d3373dbdc3185b9d80
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlPkwo8ACgkQVWmRsqeSphOVVQCeIViJjCJhrdDpZVwUWz0p++eN
-6d8AnijoWZkLbrqHzBiBw5JaVe34HfZn
-=v72j
+iEYEAREIAAYFAlPrHgAACgkQVWmRsqeSphOObACfYZx1WZbGiRr2ywZhSZdyyDAM
+ImkAnR5kdZLHAKVmWt3tTKhMB1mYKEbA
+=ApED
 -----END PGP SIGNATURE-----
