@@ -1,6 +1,12 @@
 # ChangeLog for x11-drivers/nvidia-drivers
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-drivers/nvidia-drivers/ChangeLog,v 1.568 2014/08/08 12:29:02 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-drivers/nvidia-drivers/ChangeLog,v 1.569 2014/08/13 08:12:47 jer Exp $
+
+*nvidia-drivers-343.13-r1 (13 Aug 2014)
+
+  13 Aug 2014; Jeroen Roovers <jer@gentoo.org> -nvidia-drivers-343.13.ebuild,
+  +nvidia-drivers-343.13-r1.ebuild:
+  Install application profiles too.
 
   08 Aug 2014; Jeroen Roovers <jer@gentoo.org> nvidia-drivers-304.123.ebuild,
   nvidia-drivers-331.89.ebuild:
