@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/libhid
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libhid/ChangeLog,v 1.8 2013/02/03 12:15:48 pacho Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libhid/ChangeLog,v 1.9 2014/08/13 08:47:57 jer Exp $
+
+  13 Aug 2014; Jeroen Roovers <jer@gentoo.org> libhid-0.2.16-r3.ebuild:
+  Stop configure from mangling CFLAGS (bug #519768).
 
   03 Feb 2013; Pacho Ramos <pacho@gentoo.org> -libhid-0.2.16-r2.ebuild,
   metadata.xml:
